operator/pkg/gateway-api/testdata/gateway/gateway-modify-listeners/output/gateway-remove-listener.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  creationTimestamp: null
  name: gateway-remove-listener
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  gatewayClassName: cilium
  listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: secure.test.com
      name: https
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-validity-checks-certificate
            namespace: gateway-conformance-infra
    - allowedRoutes:
        namespaces:
          from: All
      name: http
      port: 80
      protocol: HTTP
status:
  attachedListenerSets: 0
  conditions:
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: Gateway successfully scheduled
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T05:06:15Z"
      message: Gateway waiting for address
      reason: AddressNotAssigned
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Invalid CertificateRef
          reason: InvalidCertificateRef
          status: "False"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Listener not valid. Invalid CertificateRef, secrets "tls-validity-checks-certificate" not found
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: https
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
    - attachedRoutes: 1
      conditions:
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T05:49:49Z"
          message: Address not ready yet
          reason: Pending
          status: "False"
          type: Programmed
      name: http
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
